@@ -1,3 +1,9 @@
+2014-11-11  Myles C. Maxfield  <mmaxfield@apple.com>
+
+        Unreviewd iOS build fix
+
+        * platform/spi/cocoa/CoreTextSPI.h:
+
 2014-11-11  David Kilzer  <ddkilzer@apple.com>
 
         Protect Document in ProcessingInstruction::setXSLStyleSheet()
